--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -5,7 +5,7 @@
         <title>raggebatman</title>
         <meta name="robots" content="noindex,nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="https://ragge.xyz/style.css">
     </head>
     <body>
         <h2>Hi, I'm Ragge!</h2>
@@ -21,6 +21,7 @@
             <li>Mastodon: <a href="https://hachyderm.io/@ragge">@ragge@hachyderm.io</a></li>
             <li>GitHub: <a href="https://github.com/raggebatman">@raggebatman</a></li>
             <li>Revolt: @raggebatman</li>
+            <li>E-Mail: <a href="mailto:raggebatman@tutanota.com">raggebatman@tutanota.com</a></li>
         </ul>
         <p>
             My website is pretty empty at the moment but I might start writing a logbook of sorts.
@@ -31,15 +32,13 @@
             I've tried running with Jekyll, Svelte, and other frameworks, but it just doesn't sit right with me.
             I want to write text, not think about structuring the template around which I write my text.
             That's why Gopher and Gemini caught my interest.
-            Maybe I'll move there in the future; their plaintext nature sounds nice.
+            Maybe I'll move there in the future; their plaintext nature sounds nice, while still allowing me to share it in a recognisable medium.
         </p>
-        <!--
-        <hr>
+        <!--<hr>
         <div style="text-align: center;">
             <span>I'm on the geekring, check it out!</span>
             <br>
             <span>&lt;&lt; <a href="#">Previous page</a> | <a href="#">Random page</a> | <a href="#">Next page</a> &gt;&gt;</span>
-        </div>
-        -->
+        </div>-->
     </body>
 </html>
