--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -5,14 +5,11 @@
         <title>raggebatman</title>
         <meta name="robots" content="noindex,nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://ragge.xyz/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h2>Hi, I'm Ragge!</h2>
-        <p>
-            I work in the audiovisual industry, as a programmer for control systems.
-            Welcome!
-        </p>
+        <span>I work in the audiovisual industry, as a programmer for control systems. Welcome!</span>
         <p>
             I'm interested in mostly geeky topics like Linux systems, some coding, reading, mythology and whatnot.
             This webpage should serve as a mild introduction to who I am but if you'd like, you can find me here:
@@ -24,16 +21,16 @@
             <li>E-Mail: <a href="mailto:raggebatman@tutanota.com">raggebatman@tutanota.com</a></li>
         </ul>
         <p>
-            My website is pretty empty at the moment but I might start writing a logbook of sorts.
-            My aim is to keep the HTML to a minimum, preferably keeping the same head everywhere so I only need to modify the actual page content.
-            This means I'll have no sections across multiple pages, like a footer or a header.
-        </p>
-        <p>
             I've tried running with Jekyll, Svelte, and other frameworks, but it just doesn't sit right with me.
             I want to write text, not think about structuring the template around which I write my text.
-            That's why Gopher and Gemini caught my interest.
-            Maybe I'll move there in the future; their plaintext nature sounds nice, while still allowing me to share it in a recognisable medium.
+            The web isn't perfect though, that's why Gopher and Gemini caught my interest.
+            Maybe I'll move there in the future; their plaintext nature sounds nice.
         </p>
+        <span>For now though, I've got this amazing list totaling...</span>
+        <ul>
+            <li>My journal entries: <a href="./journal/">ragge.xyz/journal</a></li>
+        </ul>
+        <span>one item!</span>
         <!--<hr>
         <div style="text-align: center;">
             <span>I'm on the geekring, check it out!</span>
