--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -20,17 +20,18 @@
             <li>Revolt: @raggebatman</li>
             <li>E-Mail: <a href="mailto:raggebatman@tutanota.com">raggebatman@tutanota.com</a></li>
         </ul>
+        <h3>Say hi :)</h3>
         <p>
-            I've tried running with Jekyll, Svelte, and other frameworks, but it just doesn't sit right with me.
-            I want to write text, not think about structuring the template around which I write my text.
-            The web isn't perfect though, that's why Gopher and Gemini caught my interest.
-            Maybe I'll move there in the future; their plaintext nature sounds nice.
+            You found me!
+            I'm happy to answer any e-mails you send my way.
+            If you'd like, you can be added to a little list of people who've viewed my website.
+            Currently there's no one on it so, why not be the first?
+            Mail me with your desired display name and a little message to everyone else.
         </p>
-        <span>For now though, I've got this amazing list totaling...</span>
+        <h3>Looking for more?</h3>
         <ul>
             <li>My journal entries: <a href="./journal/">ragge.xyz/journal</a></li>
         </ul>
-        <span>one item!</span>
         <!--<hr>
         <div style="text-align: center;">
             <span>I'm on the geekring, check it out!</span>
