--- a/ragge.xyz/journal/index.html
+++ b/ragge.xyz/journal/index.html
@@ -10,13 +10,24 @@
     <body>
         <a href="..">Go back...</a>
         <article>
+            <h2><time>2022-12-24: Christmas!</time></h2>
+            <p>
+                It's Christmas Eve so I just felt like writing something a little short.
+                Yeah, we celebrate on the eve in Sweden.
+                Writing this at my parents' house which is where I used to live a mere couple months ago.
+                Happy holidays, reader.
+                My suitcase got stolen on the way but luckily the expensive stuff was in my backpack.
+                Still something of a bummer.
+            </p>
+        </article>
+        <article>
             <h2><time>2022 and earlier</time></h2>
             <p>
                 This is my first entry, fun!
                 Up until this point, I've only had thoughts of congregating my ideas and what I do.
                 I guess this is it.
             </p>
-            <a href="first-entry.html">Continue reading...</a>
+            <a href="000-first-entry.html">Continue reading...</a>
         </article> 
     </body>
 </html>
