--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -32,11 +32,11 @@
         <ul>
             <li>My journal entries: <a href="./journal/">ragge.xyz/journal</a></li>
         </ul>
-        <!--<hr>
+        <hr>
         <div style="text-align: center;">
             <span>I'm on the geekring, check it out!</span>
             <br>
-            <span>&lt;&lt; <a href="#">Previous page</a> | <a href="#">Random page</a> | <a href="#">Next page</a> &gt;&gt;</span>
-        </div>-->
+            <span>&lt;&lt; <a href="https://geekring.net/site/236/previous">Previous page</a> | <a href="https://geekring.net/site/236/random">Random page</a> | <a href="https://geekring.net/site/236/next">Next page</a> &gt;&gt;</span>
+        </div>
     </body>
 </html>
