--- a/ragge.xyz/journal/index.html
+++ b/ragge.xyz/journal/index.html
@@ -10,7 +10,16 @@
     <body>
         <a href="..">Go back...</a>
         <article>
-            <h2><time>2022-12-24: Christmas!</time></h2>
+            <h2><time>2022-12-27</time></h2>
+            <p>
+                Writing this on my way home on the train.
+                Just thought I'd say that my website was added to the Geekring today (no. 236!)
+                It's pretty neat so go have a look:
+            </p>
+            <a href="http://geekring.net/">geekring.net</a>
+        </article>
+        <article>
+            <h2><time>2022-12-24</time></h2>
             <p>
                 It's Christmas Eve so I just felt like writing something a little short.
                 Yeah, we celebrate on the eve in Sweden.
