journal thingamabob and robots
this website is always under construction!

--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <h2>Hi, I'm Ragge!</h2>
-        <span>I work in the audiovisual industry, as a programmer for control systems. Welcome!</span>
+        <p>
+            I work in the audiovisual industry, as a programmer for control systems.
+            Welcome!
+        </p>
         <p>
             I'm interested in mostly geeky topics like Linux systems, some coding, reading, mythology and whatnot.
             This webpage should serve as a mild introduction to who I am but if you'd like, you can find me here:
@@ -20,20 +23,19 @@
             <li>Revolt: @raggebatman</li>
             <li>E-Mail: <a href="mailto:raggebatman@tutanota.com">raggebatman@tutanota.com</a></li>
         </ul>
-        <h3>Say hi :)</h3>
         <p>
-            You found me!
-            I'm happy to answer any e-mails you send my way.
-            If you'd like, you can be added to a little list of people who've viewed my website.
-            Currently there's no one on it so, why not be the first?
-            Mail me with your desired display name and a little message to everyone else.
+            I'm happy to answer any e-mails you might send my way.
         </p>
-        <h3>Looking for more?</h3>
+        <h3>My stuff</h3>
         <ul>
-            <li>My journal entries: <a href="./journal/">ragge.xyz/journal</a></li>
+            <li>Journal <a href="./journal/">ragge.xyz/journal</a></li>
         </ul>
-        <hr>
         <div style="text-align: center;">
+            <picture>
+                <source srcset="construction.gif" media="(prefers-reduced-motion: no-preference)">
+                <img src="construction.png" alt="Under construction" style="max-width: 100%;" />
+            </picture>
+            <br>
             <span>I'm on the geekring, check it out!</span>
             <br>
             <span>&lt;&lt; <a href="https://geekring.net/site/236/previous">Previous page</a> | <a href="https://geekring.net/site/236/random">Random page</a> | <a href="https://geekring.net/site/236/next">Next page</a> &gt;&gt;</span>
