--- a/ragge.xyz/journal/index.html
+++ b/ragge.xyz/journal/index.html
@@ -10,6 +10,33 @@
     <body>
         <a href="..">Go back...</a>
         <article>
+            <h2><time>2022-12-29</time></h2>
+            <p>
+                This is starting to look more and more like a "now" page...
+                Well, what I call it doesn't really matter.
+                It's nice to have a place where I can just write whatever I like, however it's formatted.
+            </p>
+            <p>
+                Anyhoo, currently I'm learning NetLinx programming.
+                I'd like to learn how to create a proper PHP backend as well, there's a lot to consider.
+                Tomorrow I will look into getting a notebook or two so I can start with that.
+            </p>
+            <p>
+                Learning NetLinx (by AMX) will be interesting.
+                I already have working experience with a couple others, namely Crestron, QSC and Kramer on the control system side.
+                Then, of course, every DSP manufacturer wants to have their own software.
+                AMX isn't very large in Sweden, the situation here is far from what I've been told about the U.S.
+            </p>
+            <p>
+                Oh by the way, I would just like to go on about my Linux install on a laptop I've kept since school.
+                It's running Arch Linux (as you do) and I would really like to get better at working without the mouse.
+                I've spent some weeks running it solely on a terminal multiplexor (tmux) but really;
+                As fun as it is to work around not using a GUI, at some point, a graphical environment is just necessary.
+                So I settled on ratpoison.
+                It has bindings like tmux and a similar workflow.
+            </p>
+        </article>
+        <article>
             <h2><time>2022-12-27</time></h2>
             <p>
                 Writing this on my way home on the train.
@@ -35,8 +62,67 @@
                 This is my first entry, fun!
                 Up until this point, I've only had thoughts of congregating my ideas and what I do.
                 I guess this is it.
+                First and foremost, I would like to thank Dave Gauer at <a href="http://ratfactor.com">ratfactor.com</a> for inspiring me to do this.
+                I read about his <a href="https://ratfactor.com/notes">notebook system</a> and really liked it.
             </p>
-            <a href="000-first-entry.html">Continue reading...</a>
+            <p>
+                What have I been doing up until now?
+                Not a whole lot really, I'm still young!
+                In short, I spent an unhealthy amount of time on my computer.
+                Inevitably, I became pretty knowledgeable with it.
+                I've dabbled in small bits of programming since I was 14.
+                Started getting interested in it as I was 13.
+                First code I wrote was HTML, naturally it led onto JavaScript.
+            </p>
+            <p>
+                I've used Discord for a while now but before that, there was a platform made by Curse that I used to chat on.
+                Minecraft has been a game I've always liked so I used to talk in some Minecraft forum server.
+                On there I met my longest-standing online contact, who I've now known for 6 years and counting.
+                Unfortunately the Curse app was bought by Twitch and all the accounts got migrated.
+            </p>
+            <p>
+                Around the time I was 15 we got to do some programming in school.
+                It was really just Scratch but it's neat that we got to do it.
+                My maths teacher even told me he thought I'd be a programmer in the future.
+                I didn't think much of it at the time but, turned out true!
+            </p>
+            <p>
+                From there on I picked up NodeJS and Python.
+                When I was around 16~17, we had a teacher who was into web development.
+                We got to learn some Dreamweaver in school and we used a server he rented.
+                It ran PHP so I got in touch with some of that as well.
+            </p>
+            <p>
+                During that time, my father gave me two servers.
+                Both of them were from his workplace, both of them supposed to be scrapped.
+                That was my introduction to Linux.
+                I'm really glad I got to experiment with it.
+                Nowadays I'm a bit of a Linux/libre software geek.
+                Not that I'm super-duper technical with it.
+            </p>
+            <p>
+                Where am I now?
+                Well, I got a job recently-ish (4 months ago) and moved out in conjunction with it, my first time living on my own.
+                It's peculiar but I feel safe and I think that's what matters most.
+                I graduated from "gymnasium" in the summer, I was 18 turning 19 at the time for reference.
+            </p>
+            <p>
+                I feel lucky to be where I am at the moment.
+                The school I went to had a collaboration with Special-Elektronik, a distributor of AV equipment in Sweden and a certified Crestron dealer.
+                In school we had a couple months of time dedicated to internship and getting work experience.
+            </p>
+            <p>
+                For my internship, I happened to be one of the few who were interested in going to Special-Elektronik.
+                They accepted people from my school and the school right next to ours.
+                At Special-Elektronik, we got to enjoy a couple Crestron courses, rounding up with a certificate in CTI-P101, the "beginner programmer" course so-to-speak.
+                Nonetheless, it meant I had some dirt on my hands, and I wasn't too shabby at it either.
+            </p>
+            <p>
+                Since Special-Elektronik is a certified dealer, they had some people from a small company on a visit for business.
+                It's a service company, they work with AV/IT integration and procurements.
+                I don't know if they were coming there with this trainee programme in mind, but they happened to be short on staff.
+                There was a small little interview to get to know us and, well, now I'm in Stockholm.
+            </p>
         </article> 
     </body>
 </html>
