--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>raggebatman</title>
-        <meta name="robots" content="noindex,nofollow">
+        <meta name="robots" content="index">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
     </head>
