journal update, new page

--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -20,7 +20,6 @@
         <ul>
             <li>Mastodon: <a href="https://hachyderm.io/@ragge">@ragge@hachyderm.io</a></li>
             <li>GitHub: <a href="https://github.com/raggebatman">@raggebatman</a></li>
-            <li>Revolt: @raggebatman</li>
             <li>E-Mail: <a href="mailto:raggebatman@tutanota.com">raggebatman@tutanota.com</a></li>
         </ul>
         <p>
@@ -29,6 +28,7 @@
         <h3>My stuff</h3>
         <ul>
             <li>Journal <a href="./journal/">ragge.xyz/journal</a></li>
+            <li>Cool things <a href="./cool-things/">ragge.xyz/cool-things</a></li>
         </ul>
         <div style="text-align: center;">
             <picture>
