--- a/ragge.xyz/journal/index.html
+++ b/ragge.xyz/journal/index.html
@@ -2,13 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>RB - My Journal</title>
+        <title>Journal</title>
         <meta name="robots" content="noindex,nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <a href="..">Go back...</a>
+        <article>
+            <h2><time>2023-01-01</time></h2>
+            <p>
+                It's a new year!
+                Wanted to say I bought two books for taking notes yesterday.
+                A smaller lined one, and an A5 with graph dotted paper.
+                Got two gel pens as well, one which you can rub away.
+                Also added a new page to this website, a list of <a href="../cool-things">cool things</a>.
+            </p>
+        </article>
         <article>
             <h2><time>2022-12-29</time></h2>
             <p>
