--- a/ragge.xyz/journal/index.html
+++ b/ragge.xyz/journal/index.html
@@ -10,6 +10,16 @@
     <body>
         <a href="..">Go back...</a>
         <article>
+            <h2><time>2023-01-07</time></h2>
+            <p>
+                Discovered <a href="https://nanoc.app/">Nanoc</a>.
+                It's a pretty neat static site generator built with Ruby, which allows some cool things like converting Markdown to HTML on compile.
+                I've used Jekyll and Middleman but it just felt like they did more than I needed them to.
+                Nanoc is something I can shape however I like, and that is important to me.
+                It enables templating and such while seeming more lightweight than Middleman and being less purposeful than Jekyll.
+            </p>
+        </article>
+        <article>
             <h2><time>2023-01-01</time></h2>
             <p>
                 It's a new year!
