--- a/ragge.xyz/journal/index.html
+++ b/ragge.xyz/journal/index.html
@@ -10,6 +10,15 @@
     <body>
         <a href="..">Go back...</a>
         <article>
+            <h2><time>2023-01-12</time></h2>
+            <p>
+                Updated the repository this site is on with a new domain under <a href="https://library.ragge.xyz">library.ragge.xyz</a>!
+                I've always wanted to share some of my knowledge in a somewhat freeform way, and this is a step in the right direction.
+                Nothing too fancy, as of writing this there's just a mock page.
+                You can view the source on GitHub though, this one's built with Ruby (unlike what you're reading now which is all by hand).
+            </p>
+        </article>
+        <article>
             <h2><time>2023-01-07</time></h2>
             <p>
                 Discovered <a href="https://nanoc.app/">Nanoc</a>.
