--- a/ragge.xyz/journal/index.html
+++ b/ragge.xyz/journal/index.html
@@ -10,6 +10,14 @@
     <body>
         <a href="..">Go back...</a>
         <article>
+            <h2><time>2023-01-21</time></h2>
+            <p>
+                Launched a shared Linode instance on a quad-core 16GB system.
+                Mainly to be used as a game server with friends, currently running Valheim :)
+                I would host it on my own hardware but unfortunately my ISP situation isn't looking too well...
+            </p>
+        </article>
+        <article>
             <h2><time>2023-01-12</time></h2>
             <p>
                 Updated the repository this site is on with a new domain under <a href="https://library.ragge.xyz">library.ragge.xyz</a>!
