--- a/ragge.xyz/index.html
+++ b/ragge.xyz/index.html
@@ -19,8 +19,9 @@
         </p>
         <ul>
             <li>Mastodon: <a href="https://hachyderm.io/@ragge">@ragge@hachyderm.io</a></li>
-            <li>GitHub: <a href="https://github.com/raggebatman">@raggebatman</a></li>
+            <li>GitHub: <a href="https://github.com/raggebatman">github.com/raggebatman</a></li>
             <li>E-Mail: <a href="mailto:raggebatman@tutanota.com">raggebatman@tutanota.com</a></li>
+            <li>Donate: <a href="https://ko-fi.com/raggebatman">ko-fi.com/raggebatman</a>
         </ul>
         <p>
             I'm happy to answer any e-mails you might send my way.
