migrate to new domain

--- a/ragge.xyz/www/index.html
+++ b/ragge.xyz/www/index.html
@@ -2,27 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>raggebatman</title>
-        <meta name="robots" content="index, follow" />
+        <title>Redirecting...</title>
+        <meta name="robots" content="noindex, follow" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./style.css" />
+        <meta http-equiv="Refresh" content="0; URL=https://ragge.gay/" />
     </head>
     <body>
-        <main>
-            <p>Hi there!</p>
-            <p>I'm currently in the process of migrating this domain as well as my Linode instance.</p>
-            <p>ETA is whenever I feel like doing it :)</p>
-            <div style="text-align: center;">
-                <span>I'm on the geekring, check it out.</span>
-                <br>
-                <span>
-                  &lt;&lt; <a href="https://geekring.net/site/236/previous">Previous page</a>
-                  |
-                  <a href="https://geekring.net/site/236/random">Random page</a>
-                  |
-                  <a href="https://geekring.net/site/236/next">Next page</a> &gt;&gt;
-                </span>
-              </div>
-        </main>
+        <p>
+            You should be redirected shortly.
+            If not, follow this link:
+        </p>
+        <a href="https://ragge.gay/">https://ragge.gay/</a>
     </body>
 </html>
