--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 			<fieldset>
 				<legend>Contact</legend>
 				<p>
-					You can send an e-mail if you want a quick way to get in touch :)
+					You can send an e-mail if you want a quick way to get in touch.
 					There is an encryption key if you'd like some security.
 					I also exist on some other platforms but this is what
 					you should use if you didn't find me through those.
@@ -36,28 +36,30 @@
 			<fieldset>
 				<legend>About</legend>
 				<p>
-					I was born 2003-11-13 <span id="birthday"></span> and I come from Sweden.
-					Enby with He/She pronouns. I like to be femmy but generally, I'm
-					mostly masc. Pansexual and aromantic.
-				</p>
-				<p>
-					My interests (read: hobbies) include programming, networking, servers, computers,
-					software, hardware, and all that these entail. I'm also interested in
-					history relating to IT and to some extent in the LGBT. I like to learn
-					new things and I love to teach people new things.
-					Oh, and I'm a gamer, can't forget that.
+					My interests involve programming, networking, servers, computers,
+					software, hardware, and that kind of stuff. I like to learn
+					new things and I especially like teaching people things that
+					I'm interested in.
 				</p>
 				<p>
 					I work in the AV industry as a programmer and technician.
-					On the control system side, I mostly dabble in Crestron, Kramer, and AMX.
+					On the control system side, I mostly deal with Crestron, Kramer, and AMX.
 					I also work with software from Sennheiser, Audinate, HiQnet, QSC, and Bose.
 					Those pop up the most, but there are of course less common brands.
 				</p>
 				<p>
-					It feels like I have a lot of interests but the vast majority are
-					related to IT, and most of those involve computers. So I don't know,
-					but it might all look a bit same-same to someone who isn't read up on it?
-					Or just confusing, lol.
+					I'm not super experienced with coding but I enjoy it
+					as a hobby from time to time. Languages that I've used before
+					include Ruby, C#, Python, PHP, JavaScript, Lua, Java, HTML,
+					CSS, Bash, and probably
+					more that I don't remember :P
+				</p>
+				<p>
+					I run two PowerEdge servers at home, thankfully electricity
+					is included in the rent!
+				</p>
+				<p>
+					I was born 2003 in case you're wondering.
 				</p>
 			</fieldset>
 			<noscript>
@@ -65,7 +67,6 @@
 					<p>
 						This webpage uses JavaScript, but your browser doesn't support it,
 						or you decided to opt-out of it, and that's cool!
-						Thank you for being a cool person.
 					</p>
 				</fieldset>
 			</noscript>
