--- a/www/index.html
+++ b/www/index.html
@@ -2,184 +2,206 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>ragge.gay</title>
+		<title>raggebatman</title>
 		<meta name="description" content="Just someone's personal website.">
 		<meta name="color-scheme" content="light dark">
 		<meta name="robots" content="index, follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="favicon.ico" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<header class="center">
-			<h1>ragge<wbr>.gay</h1>
+		<header>
+			<h1>Hi, I'm Ragge!</h1>
 		</header>
 		<main>
 			<p>
-				Heyo, welcome to my website &lt;3
-				You may also know me as raggebatman.
-				Have a look!
+				Welcome &lt;3
 			</p>
 			<fieldset>
 				<legend>Contact</legend>
 				<p>
-					You can send an e-mail if you want a quick way to get in touch.
-					There is an encryption key if you'd like some security.
-					I also exist on some other platforms but this is what
-					you should use if you didn't find me through those.
+					I respond to e-mails whenever I find time for it.
+					It might take a day, or it might take a week :)
 				</p>
 				<ul>
 					<li>E-mail: <a href="mailto:me@ragge.gay">me@<wbr>ragge.gay</a></li>
 					<li>PGP key: <a href="public.key">public.key</a></li>
 				</ul>
 			</fieldset>
+			<p>
+				I'm a nerd. I was born in 2003 and grew up in Sweden where I
+				still live today. Moved out and started working full-time within
+				the <abbr title="Audiovisual">AV</abbr>-industry at the age of 18.
+				I've been programming since I was 14.
+			</p>
+			<p>Some of my interests:</p>
+			<ul>
+				<li>Linux</li>
+				<li>Servers</li>
+				<li>Playing games</li>
+				<li>Listening to music</li>
+				<li>Discovering the wonders of analogue hardware</li>
+				<li>Programming</li>
+				<li>Reading books about <abbr title="Information and communications technology">ICT</abbr></li>
+				<li>(Computer) networking</li>
+			</ul>
+			<p>What I do day-to-day:</p>
+			<ul>
+				<li>Work</li>
+				<li>Game</li>
+				<li>Socialise (aka drinking)</li>
+				<li>Chores :(</li>
+			</ul>
+			<p>Programming/coding languages that I've used:</p>
+			<ul>
+				<li>Ruby</li>
+				<li>JavaScript, TypeScript</li>
+				<li>PHP</li>
+				<li>C#</li>
+				<li>Lua</li>
+				<li>Python</li>
+				<li>HTML, CSS, Sass</li>
+				<li>Bash</li>
+			</ul>
+			<p>Operating systems that I've used:</p>
+			<ul>
+				<li>Pop!_OS</li>
+				<li>Debian (Server)</li>
+				<li>Fedora (Desktop+Server)</li>
+				<li>Arch (Desktop)</li>
+				<li>Ubuntu (Server)</li>
+				<li>Windows XP, Vista, 10, 11, Server 2017</li>
+				<li>XCP-ng</li>
+				<li>pfSense, OPNsense</li>
+			</ul>
+			<p>Todo list:</p>
+			<ul>
+				<li>Add an Extron button to the website</li>
+			</ul>
+		</main>
+		<aside>
+			<p>Webrings! Yay!</p>
 			<fieldset>
-				<legend>About</legend>
-				<p>
-					My interests involve programming, networking, servers, computers,
-					software, hardware, and that kind of stuff. I like to learn
-					new things and I especially like teaching people things that
-					I'm interested in.
-				</p>
-				<p>
-					I work in the AV industry as a programmer and technician.
-					On the control system side, I mostly deal with Crestron, Kramer, and AMX.
-					I also work with software from Sennheiser, Audinate, HiQnet, QSC, and Bose.
-					Those pop up the most, but there are of course less common brands.
-				</p>
-				<p>
-					I'm not super experienced with coding but I enjoy it
-					as a hobby from time to time. Languages that I've used before
-					include Ruby, C#, Python, PHP, JavaScript, Lua, Java, HTML,
-					CSS, Bash, and probably
-					more that I don't remember :P
-				</p>
-				<p>
-					I run two PowerEdge servers at home, thankfully electricity
-					is included in the rent!
-				</p>
-				<p>
-					I was born 2003 in case you're wondering.
-				</p>
-			</fieldset>
-			<noscript>
-				<fieldset>
-					<p>
-						This webpage uses JavaScript, but your browser doesn't support it,
-						or you decided to opt-out of it, and that's cool!
-					</p>
-				</fieldset>
-			</noscript>
-			<h2>Webrings</h2>
-			<fieldset>
-				<legend class="center">The Geekring</legend>
-				<div class="roundel">
-					<div><a href="http://geekring.net/site/236/previous" rel="external">Previous</a></div>
-					<div><a href="http://geekring.net/site/236/random" rel="external">Random</a></div>
-					<div><a href="http://geekring.net/site/236/next" rel="external">Next</a></div>
+				<legend>
+					<span>The Geekring</span>
+					<a href="http://geekring.net/" rel="external" target="_blank">&#x2197;</a>
+				</legend>
+				<div>
+					<a href="http://geekring.net/site/236/previous" rel="external">Previous</a>
+					<a href="http://geekring.net/site/236/random" rel="external">Random</a>
+					<a href="http://geekring.net/site/236/next" rel="external">Next</a>
 				</div>
 			</fieldset>
+			<fieldset>
+				<legend>
+					<span>The Silly City</span>
+					<a href="http://silly.city/" rel="external" target="_blank">&#x2197;</a>
+				</legend>
+				<div>
+					<a href="https://silly.city/prev?user=ragge" rel="external">Previous</a>
+					<a href="https://silly.city/random" rel="external">Random</a>
+					<a href="https://silly.city/next?user=ragge" rel="external">Next</a>
+				</div>
+			</fieldset>
+			<p>Moar links</p>
+			<ul>
+				<li><a href="https://github.com/raggebatman" rel="external">GitHub</a></li>
+				<li><a href="https://steamcommunity.com/id/raggebatman" rel="external">Steam</a></li>
+				<li><a href="https://en.pronouns.page/@raggebatman" rel="external">Pronouns</a></li>
+				<li><a href="https://github.com/raggebatman/website" rel="external">Source code</a></li>
+			</ul>
+			<p>
+				I've got an RSS feed available <a href="feed.xml">here</a>.
+			</p>
 			<!--
+				Waiting for verification on these ones :P
+
 			<fieldset>
-				<legend class="center">The Cuddler Webring</legend>
-				<div class="roundel">
-					<div><a href="https://cuddler-webring.netlify.app/ragge/previous" rel="external">Previous</a></div>
-					<div><a href="https://cuddler-webring.netlify.app/ragge/next" rel="external">Next</a></div>
+				<legend>
+					<span>The Cuddler Webring</span>
+					<a href="https://cuddler-webring.netlify.app/" rel="external" target="_blank">&#x2197;</a>
+				</legend>
+				<div>
+					<a href="https://cuddler-webring.netlify.app/ragge/previous" rel="external">Previous</a>
+					<a href="https://cuddler-webring.netlify.app/ragge/next" rel="external">Next</a>
 				</div>
 			</fieldset>
 			<fieldset>
-				<legend class="center">The Queer Coded Webring</legend>
-				<div class="roundel">
-					<div><a href="https://isaacfish.neocities.org/webring/X.html">Previous</a></div>
-					<div><a href="https://isaacfish.neocities.org/webring/Y.html">Next</a></div>
+				<legend>
+					<span>The Queer Coded Webring</span>
+					<a href="https://isaacfish.neocities.org/webring/" rel="external" target="_blank">&#x2197;</a>
+				</legend>
+				<div>
+					<a href="https://isaacfish.neocities.org/webring/X.html">Previous</a>
+					<a href="https://isaacfish.neocities.org/webring/Y.html">Next</a>
 				</div>
 			</fieldset>
 			-->
-			<fieldset>
-				<legend class="center">The Silly City</legend>
-				<div class="roundel">
-					<div><a href="https://silly.city/prev?user=ragge" rel="external">Previous</a></div>
-					<div><a href="https://silly.city/random" rel="external">Random</a></div>
-					<div><a href="https://silly.city/next?user=ragge" rel="external">Next</a></div>
-				</div>
-			</fieldset>
-			<h2>Buttons</h2>
-			<p>
-				I've made these buttons myself, feel free to link back to
-				my site or use one of the other buttons on your website :&gt;
-				Wondering why your website is on here?
-				It's probably because I thought it was cool!
-			</p>
-			<div class="buttons">
+		</aside>
+		<div id="buttons">
+			<div>
 				<a href="http://ragge.gay/">
-					<img src="assets/gay.gif" />
+					<img alt="" src="assets/buttons/gay.gif">
 				</a>
-				<img src="assets/sissy.gif" />
-				<img src="assets/femboy.gif" />
+				<img alt="" src="assets/buttons/sissy.gif">
+				<img alt="" src="assets/buttons/femboy.gif">
 				<a href="http://geekring.net/" rel="external">
-					<img src="assets/geekring.gif" />
+					<img alt="" src="assets/buttons/geekring.gif">
 				</a>
 				<a href="https://silly.city/" rel="external">
-					<img src="assets/silly.gif" />
+					<img alt="" src="assets/buttons/silly.gif">
 				</a>
 				<a href="https://cuddler-webring.netlify.app/" rel="external">
-					<img src="assets/cuddler.gif" />
+					<img alt="" src="assets/buttons/cuddler.gif">
 				</a>
 				<a href="https://isaacfish.neocities.org/webring/" rel="external">
-					<img src="assets/queer.gif" />
+					<img alt="" src="assets/buttons/queer.gif">
 				</a>
 				<a href="https://localghost.dev/" rel="external">
-					<img src="assets/localghost.gif" />
+					<img alt="" src="assets/buttons/localghost.gif">
 				</a>
 				<a href="https://woodencrow64.neocities.org/" rel="external">
-					<img src="assets/woodencrow.gif" />
+					<img alt="" src="assets/buttons/woodencrow.gif">
 				</a>
 				<a href="http://ratfactor.com/" rel="external">
-					<img src="assets/ratfactor.gif" />
+					<img alt="" src="assets/buttons/ratfactor.gif">
 				</a>
 				<a href="https://nyabla.net/" rel="external">
-					<img src="assets/nyabla.gif" />
+					<img alt="" src="assets/buttons/nyabla.gif">
 				</a>
 				<a href="https://citrons.xyz/a/memetic-apioform-page.html" rel="external">
-					<img src="assets/apiopage.gif" />
+					<img alt="" src="assets/buttons/apiopage.gif">
 				</a>
 				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" rel="external">
-					<img src="assets/rolling.gif" />
+					<img alt="" src="assets/buttons/rolling.gif">
 				</a>
-				<img src="assets/tutanota.gif" />
-				<img src="assets/debian.gif" />
-				<img src="assets/arch.gif" />
-				<img src="assets/fedora.gif" />
-				<img src="assets/amx.gif" />
-				<img src="assets/crestron.gif" />
-				<img src="assets/kramer.gif" />
-				<img src="assets/qsys.gif" />
-				<img src="assets/dante.gif" />
-				<img src="assets/avixa.gif" />
-				<img src="assets/sennheiser.gif" />
-				<img src="assets/bose.gif" />
-				<img src="assets/construction.gif" />
-				<a href="assets/template.pdn">
-					<img src="assets/template.gif" />
+				<img alt="" src="assets/buttons/tutanota.gif">
+				<img alt="" src="assets/buttons/debian.gif">
+				<img alt="" src="assets/buttons/arch.gif">
+				<img alt="" src="assets/buttons/fedora.gif">
+				<img alt="" src="assets/buttons/amx.gif">
+				<img alt="" src="assets/buttons/crestron.gif">
+				<img alt="" src="assets/buttons/kramer.gif">
+				<img alt="" src="assets/buttons/qsys.gif">
+				<img alt="" src="assets/buttons/dante.gif">
+				<img alt="" src="assets/buttons/avixa.gif">
+				<img alt="" src="assets/buttons/sennheiser.gif">
+				<img alt="" src="assets/buttons/bose.gif">
+				<img alt="" src="assets/buttons/construction.gif">
+				<a href="assets/buttons/template.pdn">
+					<img alt="" src="assets/buttons/template.gif">
 				</a>
 			</div>
-			<h2>Links</h2>
-			<ul>
-				<li>
-					<span>GitHub</span> <a href="https://github.com/raggebatman" rel="external">github.com</a>
-				</li>
-				<li>
-					<span>Pronouns</span> <a href="https://en.pronouns.page/@raggebatman" rel="external">en.pronouns.page</a>
-				</li>
-				<li>
-					<span>Website license</span> <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode" rel="external">creativecommons.org</a>
-				</li>
-				<li>
-					<span>Website repo</span> <a href="https://github.com/raggebatman/website" rel="external">github.com</a>
-				</li>
-			</ul>
-		</main>
+		</div>
 		<footer>
+			<p>
+				The content of this page is available under the
+				<a href="LICENSE.txt">CC BY-SA 4.0</a> license.
+			</p>
+			<p>
+				This page should adapt to your browser's theme preference.
+			</p>
 		</footer>
 	</body>
-<html>
+</html>
