--- a/www/index.html
+++ b/www/index.html
@@ -15,14 +15,10 @@
 			<h1>Hi, I'm Ragge!</h1>
 		</header>
 		<main>
-			<p>
-				Welcome &lt;3
-			</p>
 			<fieldset>
 				<legend>Contact</legend>
 				<p>
-					I respond to e-mails whenever I find time for it.
-					It might take a day, or it might take a week :)
+					You're welcome to reach out to me.
 				</p>
 				<ul>
 					<li>E-mail: <a href="mailto:me@ragge.gay">me@<wbr>ragge.gay</a></li>
@@ -35,49 +31,47 @@
 				the <abbr title="Audiovisual">AV</abbr>-industry at the age of 18.
 				I've been programming since I was 14.
 			</p>
-			<p>Some of my interests:</p>
-			<ul>
-				<li>Linux</li>
-				<li>Servers</li>
-				<li>Playing games</li>
-				<li>Listening to music</li>
-				<li>Discovering the wonders of analogue hardware</li>
-				<li>Programming</li>
-				<li>Reading books about <abbr title="Information and communications technology">ICT</abbr></li>
-				<li>(Computer) networking</li>
-			</ul>
-			<p>What I do day-to-day:</p>
-			<ul>
-				<li>Work</li>
-				<li>Game</li>
-				<li>Socialise (aka drinking)</li>
-				<li>Chores :(</li>
-			</ul>
-			<p>Programming/coding languages that I've used:</p>
-			<ul>
-				<li>Ruby</li>
-				<li>JavaScript, TypeScript</li>
-				<li>PHP</li>
-				<li>C#</li>
-				<li>Lua</li>
-				<li>Python</li>
-				<li>HTML, CSS, Sass</li>
-				<li>Bash</li>
-			</ul>
-			<p>Operating systems that I've used:</p>
-			<ul>
-				<li>Pop!_OS</li>
-				<li>Debian (Server)</li>
-				<li>Fedora (Desktop+Server)</li>
-				<li>Arch (Desktop)</li>
-				<li>Ubuntu (Server)</li>
-				<li>Windows XP, Vista, 10, 11, Server 2017</li>
-				<li>XCP-ng</li>
-				<li>pfSense, OPNsense</li>
-			</ul>
+			<p>
+				I'm passionate about technology. I've always been
+				fascinated by it, like when I realised that it's
+				actually kind of crazy how video AND audio can
+				be transported with an HDMI cable... when I was
+				sixteen :')
+			</p>
+			<br>
+			<p>
+				I learnt about networking in school. The rest of
+				my skills that are applicable in the field are
+				mostly self-taught. I started really getting into
+				Linux around the age of seventeen and I got to
+				learn a whole lot about AV during my internship
+				in school that lasted for 3 months or so.
+			</p>
+			<br>
 			<p>Todo list:</p>
 			<ul>
-				<li>Add an Extron button to the website</li>
+				<li>Extron button</li>
+				<li>Coding lang buttons</li>
+				<ul>
+					<li>Ruby</li>
+					<li>JS, TS</li>
+					<li>PHP</li>
+					<li>C#</li>
+					<li>Lua</li>
+					<li>Python</li>
+					<li>HTML, CSS, Sass</li>
+					<li>Bash</li>
+				</ul>
+				<li>OS buttons</li>
+				<ul>
+					<li>Pop!_OS</li>
+					<li>Ubuntu</li>
+					<li>Windows XP, Vista, 10, 11</li>
+					<li>XCP-ng</li>
+					<li>pfSense, OPNsense</li>
+					<li>FreeBSD</li>
+				</ul>
+				<li>Rework Tutanota button to Tutamail?</li>
 			</ul>
 		</main>
 		<aside>
