--- a/www/feed/the-journey-of-my-website.html
+++ b/www/feed/the-journey-of-my-website.html
@@ -101,5 +101,9 @@
                 a fun little thing that I like taking time out of my day to do.
             </p>
         </main>
+        <footer>
+            <p>Authored by Ragge &mdash; See <a href="../LICENSE.txt">/LICENSE.txt</a></p>
+            <p>Revision 0; Published 2023-11-06</p>
+        </footer>
     </body>
 </html>
