--- a/www/feed/template.html
+++ b/www/feed/template.html
@@ -16,5 +16,9 @@
         <main>
             <p>Uh... What are you looking at?</p>
         </main>
+        <footer>
+            <p>Authored by Ragge &mdash; See <a href="../LICENSE.txt">/LICENSE.txt</a></p>
+            <p>Revision 0; Published 1970-01-01</p>
+        </footer>
     </body>
 </html>
